Cabeceras actualizadas, aun no arranca

--- a/Src/makefile
+++ b/Src/makefile
@@ -1,19 +1,19 @@
 all: clienteREST clean
 
 http_server: clienteREST.o funcionesDaniel.o funcionesAlejandro.o funcionesAngel.o
-	g++ -o http_server clienteREST.o funcionesDaniel.o funcionesAlejandro.o funcionesAngel.o
+	g++ -lstdc++ -g -std=c++11 -Wall -pedantic -o http_server clienteREST.o funcionesDaniel.o funcionesAlejandro.o funcionesAngel.o
 
 clienteREST.o: clienteREST.cc cabecera.h
-	g++ -c clienteREST.cc
+	g++ -lstdc++ -g -std=c++11 -Wall -pedantic -c clienteREST.cc
 
 funcionesDaniel.o: funcionesDaniel.cc cabecera.h
-	g++ -c funcionesDaniel.cc
+	g++ -lstdc++ -g -std=c++11 -Wall -pedantic -c funcionesDaniel.cc
 
 funcionesAlejandro.o: funcionesAlejandro.cc cabecera.h
-	g++ -c funcionesAlejandro.cc
+	g++ -lstdc++ -g -std=c++11 -Wall -pedantic -c funcionesAlejandro.cc
 
 funcionesAngel.o: funcionesAngel.cc cabecera.h
-	g++ -c funcionesAngel.cc
+	g++ -lstdc++ -g -std=c++11 -Wall -pedantic -c funcionesAngel.cc
 
 clean:
 	rm -rf *.o
